--- a/static/css/confirmed.css
+++ b/static/css/confirmed.css
@@ -18,15 +18,18 @@ body {
     width: auto;
     height: auto;
     background-color: #ff4336;
-    padding: 10px;
+    padding: 12px 26px;
     border-radius: 20px;
     color: #ffffff;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
     border: initial;
     z-index: 10000000000000000000000000000;
     cursor: pointer;
+    opacity: 0.8;
+    transition: all 0.5s;
     outliine: none; }
+    .logout:hover{opacity: 1;}
   body .yellow {
     background-color: #ffc400; }
   body .green {
@@ -259,7 +262,8 @@ body {
         font-size: 15px; } }
   @media screen and (max-width: 1067px) and (max-width: 500px) {
     body .logout {
-      right: 15px; } }
+      right: 15px;
+      opacity: 1;} }
   @media screen and (max-width: 1067px) and (max-width: 500px) {
     body a {
       width: 150px;
