--- a/static/css/entry.css
+++ b/static/css/entry.css
@@ -41,6 +41,30 @@ body {
     -webkit-transition: 0.5s;
     transition: 0.5s;
     z-index: 10000000000000000000000000000; }
+    body .Signup {
+      position: absolute;
+      top: 30px;
+      right: 50px;
+      width: auto;
+      height: auto;
+      background-color: #8295C2;
+      padding: 12px 26px;
+      border-radius: 20px;
+      color: #ffffff;
+      font-weight: bold;
+      font-size: 16px;
+      border: initial;
+      z-index: 10000000000000000000000000000;
+      cursor: pointer;
+      opacity: 0.8;
+      transition: all 0.5s;
+      outliine: none; }
+
+      .Signup:hover{opacity: 1;}
+    @media screen and (max-width: 1067px) and (max-width: 500px) {
+      body .Signup {
+        right: 15px;
+        opacity: 1; } }
     body .alert .msg {
       width: auto;
       display: -webkit-box;
@@ -273,26 +297,33 @@ body {
         margin-left: -15%; }
       body .wrapper .forget span {
         color: #8295C2; }
+@media screen and (max-width: 1067px) {
+        body a {
+          width: 210px;
+          height: 40px;
+          cursor: pointer;
+          margin-top: 30px;
+          position: absolute;
+          margin-left: initial;
+          z-index: 10;
+          left: 15px; }
+          body a .logo {
+            width: 100%;
+            height: 100%; }}
+
+            @media screen and (max-width: 1067px) and (max-width: 500px) {
+              body a {
+                width: 150px;
+                cursor: pointer;
+                margin-left: 15px; } }
+            @media screen and (max-width: 1067px) and (max-width: 500px) {
+              body a .logo {
+                margin-left: 15px; } }
 
 @media screen and (max-width: 500px) {
   body {
     padding-left: 12px;
     padding-right: 12px; }
-    body a {
-      width: 210px;
-      height: 40px;
-      cursor: pointer;
-      margin-top: 30px;
-      margin-left: 65px;
-      position: absolute;
-      z-index: 10;
-      left: 50%;
-      margin-left: -105px; }
-      body a .logo {
-        margin-top: 30px;
-        margin-left: 65px;
-        width: 100%;
-        height: 100%; }
     body .alert {
       width: 90%;
       margin-left: -45%;
