--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,6 +12,30 @@ body {
   color: #8295c2;
   margin: initial;
   overflow-x: hidden; }
+  body .Signin {
+    position: absolute;
+    top: 30px;
+    right: 50px;
+    width: auto;
+    height: auto;
+    background-color: #8295C2;
+    padding: 12px 26px;
+    border-radius: 20px;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 16px;
+    border: initial;
+    z-index: 10000000000000000000000000000;
+    cursor: pointer;
+    opacity: 0.8;
+    transition: all 0.5s;
+    outliine: none; }
+
+    .Signin:hover{opacity: 1;}
+  @media screen and (max-width: 1067px) and (max-width: 500px) {
+    body .Signin {
+      opacity: 1;
+      right: 15px; } }
   body .yellow {
     background-color: #ffc400; }
   body .green {
@@ -291,26 +315,34 @@ body {
               color: #F32E2E; }
 
 @media screen and (max-width: 1067px) {
+  body a {
+    width: 210px;
+    height: 40px;
+    cursor: pointer;
+    margin-top: 30px;
+    position: absolute;
+    margin-left: initial;
+    z-index: 10;
+    left: 15px; }
+    body a .logo {
+      width: 100%;
+      height: 100%; }}
+
+      @media screen and (max-width: 1067px) and (max-width: 500px) {
+        body a {
+          width: 150px;
+          cursor: pointer;
+          margin-left: 15px; } }
+      @media screen and (max-width: 1067px) and (max-width: 500px) {
+        body a .logo {
+          margin-left: 15px; } }
+
+@media screen and (max-width: 1067px) {
   body {
     font-family: Montserrat;
     color: #8295c2;
     margin: initial;
     height: 100%; }
-    body a {
-      width: 210px;
-      height: 40px;
-      cursor: pointer;
-      margin-top: 30px;
-      margin-left: 65px;
-      position: absolute;
-      z-index: 10;
-      left: 50%;
-      margin-left: -105px; }
-      body a .logo {
-        margin-top: 30px;
-        margin-left: 65px;
-        width: 100%;
-        height: 100%; }
     body .alert {
       width: 90%;
       margin-left: -45%; } }
@@ -392,7 +424,8 @@ body {
   font-size: 30px;
   font-weight: bold;
   border: initial;
-  margin-top: 10px; }
+  margin-top: 10px;
+  height: 42px;}
 
 #r-slider {
   margin-top: 20px; }
