--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,7 +15,7 @@ body {
   body .Signin {
     position: absolute;
     top: 30px;
-    right: 50px;
+    right: 30px;
     width: auto;
     height: auto;
     background-color: #8295C2;
@@ -33,7 +33,7 @@ body {
 
     .Signin:hover{opacity: 1;}
   @media screen and (max-width: 1067px) and (max-width: 500px) {
-    body .Signin {
+    body a .Signin {
       opacity: 1;
       right: 15px; } }
   body .yellow {
@@ -81,7 +81,7 @@ body {
         color: white;
         font-size: 15px;
         margin: initial; }
-  body a {
+  body .logo {
     width: 210px;
     height: 40px;
     cursor: pointer;
@@ -89,12 +89,8 @@ body {
     margin-left: 65px;
     position: absolute;
     z-index: 100; }
-    body a .logo {
-      margin-top: 30px;
-      margin-left: 65px;
-      width: 100%;
-      height: 100%; }
-    body a img {
+
+    body a .logo img {
       width: 100%;
       height: 100%; }
   body .milk {
@@ -235,7 +231,8 @@ body {
             border-bottom: 2px solid;
             outline: none;
             text-align: center;
-            font-weight: bold; }
+            font-weight: bold;
+            margin-bottom: 20px;}
           body .wrapper .registration form .form-element ::-webkit-input-placeholder {
             color: #8295c2;
             font-weight: bold; }
@@ -335,27 +332,27 @@ body {
               color: #F32E2E; }
 
 @media screen and (max-width: 1067px) {
-  body a {
+  body .logo {
     width: 210px;
     height: 40px;
     cursor: pointer;
     margin-top: 30px;
+    margin-left: 30px;
     position: absolute;
     margin-left: initial;
     z-index: 10;
     left: 15px; }
-    body a .logo {
-      width: 100%;
-      height: 100%; }}
 
       @media screen and (max-width: 1067px) and (max-width: 500px) {
-        body a {
+        body a .logo {
           width: 150px;
+          margin-top: 15px;
           cursor: pointer;
           margin-left: 15px; } }
       @media screen and (max-width: 1067px) and (max-width: 500px) {
         body a .logo {
-          margin-left: 15px; } }
+          margin-left: 15px;
+          margin-top: 15px; } }
 
 @media screen and (max-width: 1067px) {
   body {
